--- a/sub/sub.csproj
+++ b/sub/sub.csproj
@@ -47,11 +47,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Stealers\Keylogger.cs" />
+    <Compile Include="Util\Encryption\SimpleAES.cs" />
     <Compile Include="Util\Net\ReportEmail.cs" />
     <Compile Include="StealerThread.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Util\Encryption\" />
     <Folder Include="Util\Extensions\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
