--- a/sub/sub.csproj
+++ b/sub/sub.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <Folder Include="Util\Extensions\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="CooLogger-Stub.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
