--- a/sub/sub.csproj
+++ b/sub/sub.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Util\Misc\HardwareInfo.cs" />
     <Compile Include="Util\Misc\IStealer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
