--- a/PEIK/PEIK.csproj
+++ b/PEIK/PEIK.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
+    <Compile Include="Util\Code Generation\CodeGenerator.cs" />
+    <Compile Include="Util\Code Generation\Stealer.cs" />
     <Compile Include="Util\Crypter\Crypter.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -51,7 +53,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\Crypter\Compiler.cs" />
+    <Compile Include="Util\Code Generation\Compiler.cs" />
     <Compile Include="Util\Crypter\CrypterMethods.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
